--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "hl100 runner tracking server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -17,7 +19,11 @@
   },
   "homepage": "https://github.com/HL-100/hl100runnertracking-server#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
     "knex": "^0.14.4",
+    "nodemon": "^1.17.2",
     "pg": "^7.4.1"
   }
 }
