--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "knex": "^0.14.4",
+    "morgan": "^1.9.0",
+    "ngrok": "^3.0.1",
     "nodemon": "^1.17.2",
-    "pg": "^7.4.1"
+    "pg": "^7.4.1",
+    "twilio": "^3.14.0"
   }
 }
